--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -1,13 +1,15 @@
 body {
-  background-color: #e9e9e9; 
+  background-color: #e9e9e9;
+  height:90%;
+  width:100%;
 }
 a:hover { 
   color: red
 }
-h1,h2,h3 {
-  text-align: center;
+h1,h2,h3,h4 {
+/*   text-align: center; */
   font-family: Verdana, Arial, Helvetica, sans-serif;
-  color: black;
+  color: #6D94D1;
 }
 h1.title {
   display: table;
