--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -9,7 +9,7 @@ a:hover {
 h1,h2,h3,h4 {
 /*   text-align: center; */
   font-family: Verdana, Arial, Helvetica, sans-serif;
-  color: #6D94D1;
+  color: #1a55bf;
 }
 h1.title {
   display: table;
